--- a/style.css
+++ b/style.css
@@ -168,9 +168,9 @@ nav ul li a:hover::after {
 .tab-contents.active-tab {
     display: block;
 }
-/* .ss {
+.ss {
     font-size: 2rem;
-} */
+}
 
 /* -------services */
 
